<resources>
    <string name="app_name">Pocket CMU</string>
    <string name="register_activity">Register</string>
    <string name="login_activity">Pocket Box</string>

    <string name="tab_menu_alert">INFO</string>
    <string name="tab_menu_profile">EMAIL</string>
    <string name="tab_menu_pay">CHAT</string>
    <string name="tab_menu_setting">ACCOUNT</string>

    <string name="chat_activity">Chat Room</string>
    <string name="connect_dialog_server_address">IP address:</string>
    <string name="connect_dialog_server_port">Port:</string>
    <string name="hint_server_address">Server address</string>
    <string name="hint_server_port">Server Port</string>
    <string name="connect">Connect</string>
    <string name="status">"Status: "</string>
    <string name="connected">Connected</string>
    <string name="connection_lost">Connection Lost</string>
    <string name="dialog_connection_lost_message">Reason=%s</string>
    <string name="connection_error">Connection Error</string>
    <string name="logged_into">Logged:</string>
    <string name="joined_to_room">You have joined the room</string>
    <string name="example_zone">BasicExamples</string>
    <string name="example_lobby">The Lobby</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnected">Disconnected</string>
    <string name="log_2points">Log:</string>
    <string name="test">Test</string>
    <string name="connecting">Connecting</string>
    <string name="use_bluebox">Use Bluebox</string>
    <string name="login">Login</string>
    <string name="login_choose_user_name">Please enter your nickname:</string>
    <string name="users">Users</string>
    <string name="chat">Chat</string>
    <string name="send">Send</string>



    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_delete">Delete</string>
    <string name="action_send">Send</string>
    <string name="action_attach">Attach</string>

    <string name="set_up_user">User: </string>
    <string name="set_up_password">Password: </string>
    <string name="set_up_incoming_server">Incoming Server: </string>
    <string name="set_up_outgoing_server">Outgoing Server: </string>
    <string name="set_up_check_saving_password">Saving Password</string>
    <string name="set_up_check_login_auto">Login Automatically</string>
    <string name="set_up_button_login">Login</string>

</resources>
